<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RHRSudoku</string>
    <string name="kids">KIDS</string>
    <string name="easy">EASY</string>
    <string name="skilled">SKILLED</string>
    <string name="master">MASTER</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game">Sudoku</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="nine">9</string>
	<string name="hint">Hint</string>
	<string name="clear">Clear</string>
	<string name="clearAll">Clear All</string>
	<string name="menu_new_game">New Game</string>
	<string name="puzzle_completed">Puzzle Completed!</string>
	<string name="ok">OK</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="confirm_clear_all">Are you sure you want to reset the puzzle?</string>
	<string name="user_made_mistake">You have made a mistake</string>
	<string name="menu_rules">Rules</string>
	<string name="confirm_new_game">Are you sure you want to abandon this game?</string>
	<string name="puzzle_is_conflicting">Some of your numbers are conflicting.</string>
	<string name="user_guide">
	    The aim of the game is to fill in the grid such that each row, column and 3x3 box contains the numbers 1-9.\n\n
	    <i>
	    >> Touch an empty cell to fill it in.\n\n
	    >> You can enter notes by holding down on the cell and then toggling the numbers.\n\n
	    >> Each puzzle has exactly one solution, except for Master level, where multiple solutions are possible.\n\n
	    >> A number highlighted in red indicates that it conflicts with another number elsewhere in the puzzle.\n\n
		>> If you are stuck, use the "Hint" button to fill in a random box.\n\n\n
		</i>
		Good Luck!
	</string>
</resources>