<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.rhrsudoku"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout1"
    android:orientation="vertical"
    >
    
    <GridLayout 
        android:id="@+id/gridLayout1"
        android:rowCount="9"
        android:columnCount="9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" 
        >
    </GridLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        android:layout_gravity="center"
        >

        <ToggleButton
            android:id="@+id/one"
            style="@style/numpadButton"
            android:textOn="@string/one"
            android:textOff="@string/one" />

        <ToggleButton
            android:id="@+id/two"
            style="@style/numpadButton"
            android:textOn="@string/two"
            android:textOff="@string/two" />

        <ToggleButton
            android:id="@+id/three"
            style="@style/numpadButton"
            android:textOn="@string/three"
            android:textOff="@string/three" />

        <ToggleButton
            android:id="@+id/four"
            style="@style/numpadButton"
            android:textOn="@string/four"
            android:textOff="@string/four" />
            
        <ToggleButton
            android:id="@+id/five"
            style="@style/numpadButton"
            android:textOn="@string/five"
            android:textOff="@string/five" />

        <ToggleButton
            android:id="@+id/six"
            style="@style/numpadButton"
            android:textOn="@string/six"
            android:textOff="@string/six" />

        <ToggleButton
            android:id="@+id/seven"
            style="@style/numpadButton"
            android:textOn="@string/seven"
            android:textOff="@string/seven" />

        <ToggleButton
            android:id="@+id/eight"
            style="@style/numpadButton"
            android:textOn="@string/eight"
            android:textOff="@string/eight" />

        <ToggleButton
            android:id="@+id/nine"
            style="@style/numpadButton"
            android:textOn="@string/nine"
            android:textOff="@string/nine" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3"
        android:layout_gravity="center" 
        >
        
        <Button
            android:text="@string/hint"
            android:id="@+id/hintButton"
            style="@style/functionButton"
            />
        <Button
            android:text="@string/clear"
            android:id="@+id/clearButton"
            style="@style/functionButton"
            />
        <Button
            android:text="@string/clearAll"
            android:id="@+id/clearAllButton"
            style="@style/functionButton"
            />
    </LinearLayout>
    
</LinearLayout>